# PLLearningGround

./: .editorconfig  .gitignore  .gitmodules
ASM/: .gdb_history
ASM/amd64_linux/: gas_inte_compare_print.S  gas_intel_hello.S  hello_world.asm  libgcc_s.so.1
ASM/dos/: .gitignore  Makefile  add5bytes.asm  ascbcd.asm  cls.asm  example.asm  findmax.asm  mov.asm  mov6bytes.asm  move_cursor.asm  prod.asm  qword_add.asm  realmode32bit.asm  rotation.asm  subtraction.asm  sum.asm  template.asm  template.nasm  testflags.asm  toupper.asm  transfer_string.asm  unreal.asm  util.inc  x87fpu.asm
ASM/ia32_linux/: .gitignore  Makefile  exit.S  exitmain.S  findmax.S  template.S  template.main.S
ASM/riscv/: template.S
ASM/x86/: gas_intel_reverse_string.S
ASM/x86_32_win/: hello.S
CIL/: Add.cs  Add.il  CastConversion.il  ControlFlow.cs  ControlFlow.il  CustomTypes.cs  CustomTypes.il  Exception.cs  Exception.il  HelloWorld.cs  HelloWorld.il
FreeBASIC/: .gitignore  FirstHello  FirstHello.bas  FirstTest.bas  Makefile  VariableTest.bas
Pascal/: FirstHello.pas  FirstTest.pas  Makefile
Pwsh/: parameters.ps1  scratchpad.ps1
QuickBASIC/: Bonnie.bas  Makefile  graphics.bas  octaves.bas  playerscore.bas  qb_hello.bas  read_record.bas
TeX/: .gitignore
TeX/LaTeX/: beginner.tex
TeX/plainTeX/: basic.tex
autotools/jupiter/src/: main.c
c/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  import_gnulib.sh
c/lib/: Makefile.am
c/m4/: gnulib-cache.m4  gnulib-comp.m4
c/src/: Makefile.am  alignof.c  char_lit_is_int.c  char_lit_is_not_int.cc  computed_include.c  cstd_time.c  init_test.c  inline_keywords.c  macro_def.c  matrix.c  mergesort.h  optional.c  optional.h  pointer_array_diff.c  result.test.c  sorttest.c  static_assert.c  unistring_test.c  use_signal.c  xmacro.c
c/src/include/: utest.h
c_stdlib/CInterfacesImplementations/: CMakeLists.txt
c_stdlib/Plauger/: CMakeLists.txt
c_stdlib/Plauger/include/: assert.h
c_stdlib/Plauger/src/: assert.c
c_stdlib/Plauger/test/: tassert.c
c_stdlib/STC/: CMakeLists.txt
c_stdlib/STC/src/: calgo_test.c  cstr_test.c  cvec_test.c  pseudo_raii.c  smart_ptrs.c
cpp/: .gitignore  CMakeLists.txt
cpp/boost/: .gitignore  CMakeLists.txt
cpp/boost/src/: dummy.cc
cpp/cxx98/: CMakeLists.txt  LibMat.cc  LibMat.h  bubble_sort.cc  exclude_words.cc  family_names.cc  family_names.txt  fib.cc  matrix.cc  number_sequence.cc  number_sequence.h  odd_even_nums.cc
cpp/doc/: config
csharpPlayground/: EnumTest.cs  LoopVarClosureTest.cs  TestEnvironment.cs  csharpPlayground.csproj
csharpPlayground/morelinq/: MoreLinqTest.cs
csharpPlayground/network/: ConnectionTest.cs
cython_tutorial/: .editorconfig
f77/: .gitignore  CMakeLists.txt
f77/src/: circle.f  identity_matrix.f  io.f
golang_tutorial/db_access/: go.mod  go.sum
golang_tutorial/db_access/oracle/: oracle_test.go
golang_tutorial/learn_by_test/hello_world/: dependency_injection.go  dictionary.go  dictionary_test.go  go.mod  iteration.go  iteration_test.go  perimeter.go  perimeter_test.go  sum.go  (+3 more)
golang_tutorial/stdlib/: builtin_test.go  fmt_test.go  go.mod  strings_test.go  time_test.go
java_tutorial/: .editorconfig  .factorypath  .project  pom.xml  run.sh
julialang/: start.jl
kotlin/gradle_kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/tutorial_kotlin/: pom.xml
legacy_dotnet/: AsyncExamples.cs  AsyncProgram.cs  GlobalUsings.cs  legacy_dotnet.csproj
legacy_dotnet/legacy_dotnet.Tests/: CommonAsyncTests.cs  NetAsyncTests.cs  legacy_dotnet.Tests.csproj
lua/: factorial.lua
m4/: smart_enum.m4  test_enum.m4
msbuild_csharp/: .dir-locals.el  .gitignore  Main.cs  msbuild_csharp.csproj  nuget.config
octave_matlab/: basic_math.m  lang.m  start.m
perl/: grades  process_grades.pl  start.pl
python_tutorial/: .gitignore  db_api_test.py  logging_test.py  python_linq_test.py  python_multiprocessing_test.py  python_numerics.py  python_oop_test.py  python_threading_test.py  sqlalchemy2_unified.py  sqlalchemy_core_test.py  sqlalchemy_orm_quickstart_test.py  test_utils.py  user_id_test.py
rust_tutorial/: AGENTS.md  Cargo.toml
rust_tutorial/src/: lib.rs
rust_tutorial/tests/: integration_tests.rs
shell/: ABS_1.sh  common_math.bc
vala/: .gitignore  meson.build
vala/src/examples/: ntp.vala
vala/src/hello/: HelloGUIWorld.vala  HelloObjectWorld.vala  HelloWorld.vala  nullability.vala
vala/src/threading/: lock.vala
vb_classic/: .gitignore
vb_classic/ConsoleApp/: .gitignore  ADOConnectionEventHandler.cls  ADOTest.bas  AggregateTypesTest.bas  ArrayTest.bas  AssertThat.bas  C2Hook.c  ClassTest.bas  CollectionTest.bas  Console.bas  ConsoleApp.vbp  DateTimeTest.bas  DotnetInteropTest.bas  FileTest.bas  Makefile  Program.bas  StringFunctionTest.bas  TestClass.cls  VariantTest.bas  compile_flags.txt
vb_classic/FirstForm/: FirstForm.vbp  Form1.frm  GuiDataBinder.bas
vb_classic/GuiApp/: .exrc  .gitattributes  AGENTS.md  AlwaysFalsePredicate.cls  AlwaysTruePredicate.cls  Arrays.bas  ArraysTest.cls  Asserter.cls  BigEndianConverterTest.cls  BitAccessorTest.cls  BitPaddingTest.cls  BitReinterpretTest.cls  BuiltinTest.cls  CFileTime.cls  CSlice.cls  CSliceTest.cls  CStopwatchTest.cls  CTimeSpanTest.cls  Decimals.bas  DecimalsTest.cls  DynamicCount.cls  DynamicLength.cls  Ensure.bas  ErrorCodes.bas  FileTimeDateTime.cls  FileTimeDateTimeTest.cls  FileTimeDateTimes.bas  GuiApp.exe.config  GuiApp.lnk  GuiApp.vbp  GuiFileOutput.bas  IConsumer.cls  IErrorHandler.cls  IterTest.cls  IterableDummy.cls  IterableDummyIterator.cls  LenContainer.cls  LittleEndianConverterTest.cls  MainForm.frm  Makefile  (+13 more)
vb_classic/LegacyApp.VB6/: AGENTS.md  CArrays.cls  CDateTimeKind.cls  CDecimals.cls  CSlice.cls  Decimals.cls  Ensure.bas  Ensure.cls  FileTimeDateTime.cls  FileTimeDateTimeFactory.cls  FileTimeDateTimes.bas  IConsumer.cls  LegacyAppVB6.vbp  MinMax.bas  MinMax.cls  Numerics.cls  OleDates.bas  Singletons.bas  SystemTime.bas  TextFileOutput.cls
vb_classic/Test/: CTextboxCalc.cls  ClrTypes.bas  Form1.frm  HttpClientRequest.cls  Project1.vbp
zig/: hello_world.zig
(+52 files in other folders)
