AC_INIT([c_tutorial], [1.0.0]) # mandatory; set up a project

AM_INIT_AUTOMAKE([foreign 1.16 subdir-objects]) # initialize automake, no GNU Coding Style files such as NEWS, README, AUTHORS

AC_PROG_CC # determine the C compiler to use

AC_CONFIG_FILES([Makefile]) # create file by copying the corresponding.in template file with substuted variables


AC_OUTPUT # mark the end of autoconf
